added components and colors

--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -116,7 +116,7 @@ p, .v-select, a, .text-link, li {
   a {
     font-size: inherit;
     line-height: inherit;
-    color: $red;
+    color: $deep-blue;
     text-decoration: none;
 
     &:hover {
@@ -205,11 +205,11 @@ HEADERS
   .t1 {
     font-size: 312px;
   }
-  
+
   .t2 {
     font-size: 130px;
   }
-  
+
   .t3 {
     font-size: 80px;
   }
