--- a/assets/styles/_vars.scss
+++ b/assets/styles/_vars.scss
@@ -1,14 +1,15 @@
 // Colors
 $white: #fff;
-$red: #BC2F2B;
-$orange: #D74229;
-$pale-greg: #FFF9E7;
-$young-greg: #DFD3A8;
-$old-greg: #857550;
-$yeller: #EDBD1D;
-$dark-blue: #1B2533;
 $black: #000;
-$grey: #979797;
+$deep-blue: #0A014F;
+$dark-blue: #220196;
+$light-blue: #4100F5;
+$dark-greg: #6E6E6E;
+$medium-greg: #828282;
+$light-greg: #D0D0D0;
+$dark-white: #F7F7F7;
+
+
 
 // Typography
 $cardinal-grotesque-bold: "cardinalGrotesqueBold", "Helvetica Neue", Helvetica, sans-serif;
