--- a/assets/styles/_main.scss
+++ b/assets/styles/_main.scss
@@ -34,18 +34,6 @@ body {
   }
 }
 
-.black {
-  color: $black;
-}
-.blue {
-  color: $dark-blue;
-}
-.red {
-  color: $red;
-}
-.white {
-  color: $white;
-}
 
 .placeholder {
   display: flex;
@@ -97,20 +85,7 @@ a {
 }
 
 
-/**********************************************
-Jump Nav Markers
-**********************************************/
-.jump-target {
-  appearance: none;
-  position: relative;
-  top: -$header-height-mobile;
-}
 
-@include respond-to($tablet-landscape) {
-  .jump-target {
-    top: -$header-height;
-  }
-}
 
 /**********************************************
 Loading Indicator
@@ -145,114 +120,114 @@ Loading Indicator
 /**********************************************
 Close Text Button
 **********************************************/
-.close-button {
-  $size: 35px;
-  display: flex;
-  align-items: center;
-  text-transform: uppercase;
-  font-size: 12px;
-  color: $red;
-  letter-spacing: 0.04em;
-  cursor: pointer;
-
-  button {
-    margin-left: 0.05em;
-    width: $size;
-    height: $size;
-    background: none;
-    outline: none;
-    border: none;
-    position: relative;
-
-    &:after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      @include icon("x", $red, true);
-      cursor: pointer;
-    }
-  }
-}
+// .close-button {
+//   $size: 35px;
+//   display: flex;
+//   align-items: center;
+//   text-transform: uppercase;
+//   font-size: 12px;
+//   color: $red;
+//   letter-spacing: 0.04em;
+//   cursor: pointer;
+//
+//   button {
+//     margin-left: 0.05em;
+//     width: $size;
+//     height: $size;
+//     background: none;
+//     outline: none;
+//     border: none;
+//     position: relative;
+//
+//     &:after {
+//       content: "";
+//       position: absolute;
+//       top: 0;
+//       left: 0;
+//       width: 100%;
+//       height: 100%;
+//       @include icon("x", $red, true);
+//       cursor: pointer;
+//     }
+//   }
+// }
 
 /**********************************************
 Arrow Buttons
 **********************************************/
-.arrow-button {
-  border-radius: 50%;
-  background: $red;
-  position: relative;
-  border: none;
-  outline: none;
-
-  $size: 30px;
-  width: $size;
-  height: $size;
-  transition: background-color $speed-demon ease;
-
-  &:disabled {
-    background-color: #F8E9E9;
-    pointer-events: none;
-
-    &::after {
-    }
-  }
-
-  &:focus {
-    border: $dark-blue;
-    transform: scale(1.08);
-
-    &.left {
-      transform: scale(1.08) rotate(180deg);
-    }
-  }
-
-  &.special {
-    &:after {
-      margin: 20%;
-      left: 0;
-      @include icon("long-arrow-right", $white, true);
-    }
-  }
-
-  &:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 5%;
-    right: 0;
-    bottom: 0;
-    margin: 30%;
-    @include icon("chevron-right", $white, true);
-    transition: transform $speed-demon ease;
-  }
-
-  &.left {
-    transform: rotate(180deg);
-  }
-
-  &:active {
-    transform: scale(1) !important;
-    &.left {
-      transform: scale(1) rotate(180deg) !important;
-    }
-  }
-
-  &.animated {
-    &:before {
-      content: '';
-      @include circle($size);
-      position: absolute;
-      background: $red;
-      animation: grow $speed-metal * 2.5 $ease-out 0ms infinite;
-      transform-origin: 50% 50%;
-      top: 0;
-      left: 0;
-    }
-  }
-}
+// .arrow-button {
+//   border-radius: 50%;
+//   background: $red;
+//   position: relative;
+//   border: none;
+//   outline: none;
+//
+//   $size: 30px;
+//   width: $size;
+//   height: $size;
+//   transition: background-color $speed-demon ease;
+//
+//   &:disabled {
+//     background-color: #F8E9E9;
+//     pointer-events: none;
+//
+//     &::after {
+//     }
+//   }
+//
+//   &:focus {
+//     border: $dark-blue;
+//     transform: scale(1.08);
+//
+//     &.left {
+//       transform: scale(1.08) rotate(180deg);
+//     }
+//   }
+//
+//   &.special {
+//     &:after {
+//       margin: 20%;
+//       left: 0;
+//       @include icon("long-arrow-right", $white, true);
+//     }
+//   }
+//
+//   &:after {
+//     content: "";
+//     position: absolute;
+//     top: 0;
+//     left: 5%;
+//     right: 0;
+//     bottom: 0;
+//     margin: 30%;
+//     @include icon("chevron-right", $white, true);
+//     transition: transform $speed-demon ease;
+//   }
+//
+//   &.left {
+//     transform: rotate(180deg);
+//   }
+//
+//   &:active {
+//     transform: scale(1) !important;
+//     &.left {
+//       transform: scale(1) rotate(180deg) !important;
+//     }
+//   }
+//
+//   &.animated {
+//     &:before {
+//       content: '';
+//       @include circle($size);
+//       position: absolute;
+//       background: $red;
+//       animation: grow $speed-metal * 2.5 $ease-out 0ms infinite;
+//       transform-origin: 50% 50%;
+//       top: 0;
+//       left: 0;
+//     }
+//   }
+// }
 
 @keyframes grow {
   0% {
@@ -299,87 +274,87 @@ Arrow Buttons
 }
 
 //
-.link-btn {
-  display: inline-block;
-  border: 3px solid $orange;
-  color: $white;
-  border-radius: 8px;
-  font-size: 10px;
-  text-transform: uppercase;
-  text-align: center;
-  letter-spacing: 0.05em;
-  font-weight: 800;
-  padding: 0.3em 2em;
-  position: relative;
-
-  &.large {
-    font-size: 14px;
-    padding: 0.5em 2.4em;
-  }
-
-  &.out {
-    padding: 0.4em 2em;
-    padding-right: 4em;
-    border-color: $white;
-
-    &:after {
-      content: "";
-      display: block;
-      position: absolute;
-      top: 50%;
-      right: 10px;
-      width: 18px;
-      height: 18px;
-      margin-top: -9px;
-      transform-origin: center center;
-      border-radius: 50%;
-      @include icon("out", $white, true);
-      transition: transform $speed-demon $evil-ease $speed-demon / 2;
-    }
-  }
-
-  &.blue {
-    border-color: $dark-blue;
-    background: transparent;
-
-    &:after, &:focus {
-      border-color: $red;
-      outline: none;
-    }
-  }
-
-  &.plus {
-    padding: 0.4em 2em;
-    padding-right: 4em;
-    border-color: $red;
-
-    &:after {
-      content: "";
-      display: block;
-      position: absolute;
-      top: 0.4em;
-      right: 10px;
-      width: 18px;
-      height: 18px;
-      transform-origin: center center;
-      background: $white;
-      border-radius: 50%;
-      @include icon("clear", $white, true);
-      transform: rotate(-45deg);
-      transition: transform $speed-demon $evil-ease $speed-demon / 2;
-    }
-  }
-
-  &.inverted {
-    border-color: $red;
-    background: $red;
-  }
-
-  &.centered {
-    display: block;
-    margin: auto;
-  }
-}
+// .link-btn {
+//   display: inline-block;
+//   border: 3px solid $orange;
+//   color: $white;
+//   border-radius: 8px;
+//   font-size: 10px;
+//   text-transform: uppercase;
+//   text-align: center;
+//   letter-spacing: 0.05em;
+//   font-weight: 800;
+//   padding: 0.3em 2em;
+//   position: relative;
+//
+//   &.large {
+//     font-size: 14px;
+//     padding: 0.5em 2.4em;
+//   }
+//
+//   &.out {
+//     padding: 0.4em 2em;
+//     padding-right: 4em;
+//     border-color: $white;
+//
+//     &:after {
+//       content: "";
+//       display: block;
+//       position: absolute;
+//       top: 50%;
+//       right: 10px;
+//       width: 18px;
+//       height: 18px;
+//       margin-top: -9px;
+//       transform-origin: center center;
+//       border-radius: 50%;
+//       @include icon("out", $white, true);
+//       transition: transform $speed-demon $evil-ease $speed-demon / 2;
+//     }
+//   }
+//
+//   &.blue {
+//     border-color: $dark-blue;
+//     background: transparent;
+//
+//     &:after, &:focus {
+//       border-color: $deep-blue;
+//       outline: none;
+//     }
+//   }
+//
+//   &.plus {
+//     padding: 0.4em 2em;
+//     padding-right: 4em;
+//     border-color: $red;
+//
+//     &:after {
+//       content: "";
+//       display: block;
+//       position: absolute;
+//       top: 0.4em;
+//       right: 10px;
+//       width: 18px;
+//       height: 18px;
+//       transform-origin: center center;
+//       background: $white;
+//       border-radius: 50%;
+//       @include icon("clear", $white, true);
+//       transform: rotate(-45deg);
+//       transition: transform $speed-demon $evil-ease $speed-demon / 2;
+//     }
+//   }
+//
+//   &.inverted {
+//     border-color: $red;
+//     background: $red;
+//   }
+//
+//   &.centered {
+//     display: block;
+//     margin: auto;
+//   }
+// }
 
 @include respond-to($tablet) {
   .link-btn {
@@ -398,28 +373,28 @@ Arrow Buttons
   }
 }
 
-@include can-hover {
-  .link-btn {
-    cursor: pointer;
-
-    &:hover {
-      &.blue {
-        background: rgba(0, 0, 20, 0.2);
-      }
-      &.inverted {
-        background: transparent;
-      }
-      &.plus {
-        background: $red;
-        &:after {
-          background: $white;
-          @include icon("clear", $red, true);
-        }
-      }
-      background: $orange;
-    }
-  }
-}
+// @include can-hover {
+//   .link-btn {
+//     cursor: pointer;
+//
+//     &:hover {
+//       &.blue {
+//         background: rgba(0, 0, 20, 0.2);
+//       }
+//       &.inverted {
+//         background: transparent;
+//       }
+//       &.plus {
+//         background: $red;
+//         &:after {
+//           background: $white;
+//           @include icon("clear", $red, true);
+//         }
+//       }
+//       background: $orange;
+//     }
+//   }
+// }
 
 /**********************************************
 Fade Transitions
