--- a/assets/styles/_vars.scss
+++ b/assets/styles/_vars.scss
@@ -12,10 +12,10 @@ $dark-white: #F7F7F7;
 
 
 // Typography
-$cardinal-grotesque-bold: "cardinalGrotesqueBold", "Helvetica Neue", Helvetica, sans-serif;
-$cardinal-grotesque-wide-bold: 'cardinalGrotesqueWideBold', "Helvetica Neue", Helvetica, sans-serif;
-$cardinal-grotesque-semi-bold: 'cardinalGrotesqueSemiBold', "Helvetica Neue", Helvetica, sans-serif;
-$school-book: 'schoolBookBold', "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;;
+$gotham-bold: "GothamBold", "Helvetica Neue", Helvetica, sans-serif;
+$gotham-medium: 'GothamMedium', "Helvetica Neue", Helvetica, sans-serif;
+$gotham-book: 'GothamBook', "Helvetica Neue", Helvetica, sans-serif;
+$lemonde-livre-bold: 'LeMondeLivreBold', "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;;
 $eames-stencil: 'eamesCenturyModernStencil', "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;;
 $arial: Arial, "Helvetica Neue", Helvetica, sans-serif;
 
