--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -144,12 +144,12 @@ label {
   }
 }
 
-.stencil {
-  font-family: $eames-stencil;
-  text-transform: uppercase;
-  font-size: 18px;
-  letter-spacing: 0.06em;
-}
+// .stencil {
+//   font-family: $eames-stencil;
+//   text-transform: uppercase;
+//   font-size: 18px;
+//   letter-spacing: 0.06em;
+// }
 
 .schoolbook {
   font-family: $lemonde-livre-bold;
