--- a/assets/styles/_vars.scss
+++ b/assets/styles/_vars.scss
@@ -9,14 +9,12 @@ $medium-greg: #828282;
 $light-greg: #D0D0D0;
 $dark-white: #F7F7F7;
 
-
-
 // Typography
 $gotham-bold: "GothamBold", "Helvetica Neue", Helvetica, sans-serif;
 $gotham-medium: 'GothamMedium', "Helvetica Neue", Helvetica, sans-serif;
 $gotham-book: 'GothamBook', "Helvetica Neue", Helvetica, sans-serif;
-$lemonde-livre-bold: 'LeMondeLivreBold', "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;;
-$eames-stencil: 'eamesCenturyModernStencil', "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;;
+$lemonde-livre-bold: 'LeMondeLivreBold', "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
+// $eames-stencil: 'eamesCenturyModernStencil', "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
 $arial: Arial, "Helvetica Neue", Helvetica, sans-serif;
 
 // Shadows
