added phone icon to mixins

--- a/assets/styles/_mixins.scss
+++ b/assets/styles/_mixins.scss
@@ -284,4 +284,12 @@ Generic Icons Mixin
     background-size: cover;
     background-repeat: no-repeat;
   }
+
+  @if $name == phone {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="#{$width}" height="#{$height}" viewBox="0 0 127 127" xml:space="preserve" fill="#{svgColorMaker($fill)}">
+        <path class="c" d="M95.28,126.33A28.65,28.65,0,0,1,85,124.65a173.68,173.68,0,0,1-21.11-8c-7.54-3.52-14.19-8.41-20.5-13.77C26.94,88.77,12,71.76,5.37,50.75c-1.54-4.53-3.35-9-4.2-13.68C-1,25.82,3.39,14.77,10.81,6.38,14.67,2.21,20.64,1.62,26,.7c2.69-.37,4.47.79,5.72,3.08,4.33,7.5,8.11,15.36,13,22.49,2.65,4.06,2.37,6.15-.95,9.64-3.13,3.29-7.05,5.64-10.23,8.86-1.57,1.63-3.76,3.39-2.76,5.92,1.06,3.26,3.07,6,4.77,8.91C43.68,74,56.14,85.52,70.63,93.39c2.84,1.41,6.34,4.66,9.45,2.19C85,91.71,87.73,85.9,92.61,82c1.87-1.53,3.81-2,6-.81,3.83,2.09,7.33,4.72,11.2,6.75,4.09,2.13,8.12,4.4,12.14,6.67,2.24,1.25,4.6,2.48,4.38,5.64a61.39,61.39,0,0,1-1.22,7.36c-1,5.23-4,9-8.44,11.79-6.41,4.1-13.15,7.1-21.42,6.92"/>
+    </svg>');
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 }
