--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -109,8 +109,8 @@ p, .v-select, a, .text-link, li {
 
   &.spread{
     font-family: $gotham-bold;
-    // font-size: 16px;
-    letter-spacing: 0.8em;
+    font-size: 12px;
+    letter-spacing: 0.4em;
     line-height: 16px;
     text-transform: uppercase;
     // letter-spacing: 0.07em;
