Object fit trick, button fix

--- a/assets/styles/_main.scss
+++ b/assets/styles/_main.scss
@@ -234,6 +234,7 @@ Arrow Buttons
 .arrow {
   border: solid $white;
   border-width: 0 3px 3px 0;
+  background: none;
   display: inline-block;
   padding: 12px;
   transform: rotate(-45deg);
