update to footer email wrapper, and positiioning of right social flex

--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -202,7 +202,7 @@ HEADERS
   }
 
 
-  p, textarea, a, .text-link, li {
+  p, textarea, a, .text-link, li, input {
     font-size: 18px;
     line-height: 28px;
 
