update to footer, social links, and about using pixels vertically

--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -26,14 +26,20 @@
   font-style: normal;
 }
 
-$h4-line-height: calc(25px + (55 - 25) * ((100vw - 340px) / (1440 - 340)) * 1.6);
 
 // Typography
 h1,
 h2,
-h3,
-h4
- {
+h3
+{
+  font-family: $lemonde-livre-bold;
+  letter-spacing: 0.025em;
+  line-height: 0.95em;
+}
+
+$h4-line-height: calc(25px + (55 - 25) * ((100vw - 340px) / (1440 - 340)) * 1.6);
+
+h4{
   font-family: $lemonde-livre-bold;
   letter-spacing: 0.025em;
   line-height: $h4-line-height;
