cleaner clean up

--- a/assets/styles/_vars.scss
+++ b/assets/styles/_vars.scss
@@ -2,6 +2,7 @@
 $white: #fff;
 $black: #000;
 $blurple: #22015A;
+$blurple-2: #4100F5;
 $deep-blue: #0A014F;
 $dark-blue: #220196;
 $light-blue: #4100F5;
@@ -15,7 +16,6 @@ $gotham-bold: "GothamBold", "Helvetica Neue", Helvetica, sans-serif;
 $gotham-medium: 'GothamMedium', "Helvetica Neue", Helvetica, sans-serif;
 $gotham-book: 'GothamBook', "Helvetica Neue", Helvetica, sans-serif;
 $lemonde-livre-bold: 'LeMondeLivreBold', "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
-// $eames-stencil: 'eamesCenturyModernStencil', "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
 $arial: Arial, "Helvetica Neue", Helvetica, sans-serif;
 
 // Shadows
