--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -38,6 +38,7 @@ h3
 }
 
 $h4-line-height: calc(25px + (55 - 25) * ((100vw - 340px) / (1440 - 340)) * 1.6);
+$h5-line-height: calc(20px + (40 - 20) * ((100vw - 340px) / (1440 - 340)) * 1.6);
 
 h4{
   font-family: $lemonde-livre-bold;
@@ -48,7 +49,7 @@ h4{
 h5{
   font-family: $gotham-bold;
   letter-spacing: 0.025em;
-  line-height: 0.95em;
+  line-height: 1.6em;
 }
 
 h6{
