--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -49,7 +49,7 @@ h4{
 h5{
   font-family: $gotham-bold;
   letter-spacing: 0.025em;
-  line-height: 3.6em;
+  line-height:$h5-line-height;
 }
 
 h6{
