Couple quick fixes

--- a/assets/styles/_main.scss
+++ b/assets/styles/_main.scss
@@ -158,7 +158,7 @@ Arrow Buttons
   border: solid $white;
   border-width: 0 3px 3px 0;
   background: none;
-  display: inline-block;
+  // display: inline-block;
   padding: 12px;
   transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
