--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -27,76 +27,115 @@
 }
 
 
+// Fluid Type
+@function strip-unit($value) {
+  @return $value / ($value * 0 + 1);
+}
+
+@mixin fluid-type($min-vw, $max-vw, $min-font-size, $max-font-size) {
+  $u1: unit($min-vw);
+  $u2: unit($max-vw);
+  $u3: unit($min-font-size);
+  $u4: unit($max-font-size);
+
+  @if $u1 == $u2 and $u1 == $u3 and $u1 == $u4 {
+    & {
+      font-size: $min-font-size;
+      @media screen and (min-width: $min-vw) {
+        font-size: calc(
+          #{$min-font-size} + #{strip-unit($max-font-size - $min-font-size)} *
+            ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)})
+        );
+      }
+      @media screen and (min-width: $max-vw) {
+        font-size: $max-font-size;
+      }
+    }
+  }
+}
+
+$min: 320px;
+$max: 1280px;
+
+
 // Typography
 h1,
 h2,
 h3
 {
   font-family: $lemonde-livre-bold;
-  letter-spacing: 0.025em;
-  line-height: 0.95em;
 }
-
-$h4-line-height: calc(25px + (55 - 25) * ((100vw - 340px) / (1440 - 340)) * 1.6);
-$h5-line-height: calc(20px + (40 - 20) * ((100vw - 340px) / (1440 - 340)) * 2.0);
 
 h4{
   font-family: $lemonde-livre-bold;
-  letter-spacing: 0.025em;
-  line-height: $h4-line-height;
 }
 
 h5{
   font-family: $gotham-bold;
-  letter-spacing: 0.025em;
+  // letter-spacing: 0.025em;
   // line-height:$h5-line-height;
-  line-height: 1.4em;
+  // line-height: 1em;
 }
 
 h6{
   font-family: $gotham-bold;
-  letter-spacing: 0.45em;
-  line-height: 0.95em;
-  text-transform: uppercase;
-}
-
-h1 {
-  font-size: calc(50px + (156 - 50) * ((100vw - 340px) / (1440 - 340)));
-}
-
-h2 {
-  font-size: calc(45px + (135 - 45) * ((100vw - 340px) / (1440 - 340)));
-}
-
-h3 {
-  font-size: calc(35px + (112 - 35) * ((100vw - 340px) / (1440 - 340)));
-}
-
-h4 {
-  font-size: calc(22px + (55 - 25) * ((100vw - 340px) / (1440 - 340)));
-}
-
-h5 {
-  font-size: calc(20px + (40 - 20) * ((100vw - 340px) / (1440 - 340)));
-}
-
-h6 {
-  font-size: calc(14px + (22 - 14) * ((100vw - 340px) / (1440 - 340)));
+  &.uppercased{
+    text-transform: uppercase;
+  }
 }
 
 
+//MOBILE
+h1{
+  @include fluid-type($min, $max, 46px, 92px);
+  line-height: 1.39em;
+}
 
 
-p, .v-select, a, .text-link, li {
+//TODO NO SPOTS ON PAGE
+h2{
+  @include fluid-type($min, $max, 46px, 92px);
+  line-height: 1.39em;
+}
+
+h3{
+  @include fluid-type($min, $max, 46px, 92px);
+  line-height: 1.39em;
+}
+
+
+h4{
+  @include fluid-type($min, $max, 23px, 46px);
+  line-height: 1.30em;
+}
+
+h5{
+  @include fluid-type($min, $max, 23px, 46px);
+  line-height: 1em;
+}
+
+
+h6{
+  @include fluid-type($min, $max, 12px, 24px);
+  line-height: 2em;
+  &.spread{
+    text-transform: uppercase;
+    letter-spacing: 0.4em;
+  }
+}
+
+
+p, .v-select, a, .text-link, li, body, li, button {
   font-family: $gotham-book;
-  font-size: 14px;
-  line-height: 20px;
+  @include fluid-type($min, $max, 14px, 16px);
+  line-height: 1.71em;
+  text-transform: none;
 
   &.spread{
     font-family: $gotham-bold;
-    font-size: 12px;
+    @include fluid-type($min, $max, 12px, 16px);
     letter-spacing: 0.4em;
-    line-height: 16px;
+    line-height: 2em;
     text-transform: uppercase;
 
     &.small {
@@ -108,25 +147,16 @@ p, .v-select, a, .text-link, li {
     }
   }
 
-  &.small {
-    font-size: 12px;
-    line-height: 15px;
+  &.small{
+    @include fluid-type($min, $max, 12px, 16px);
+    line-height: 1em;
+    font-family: $gotham-medium;
   }
 
-  &.mega-small {
-    font-size: 9px;
-    line-height: 12px;
-  }
-
-  &.large {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 24px;
-  }
-
-  b,
-  strong {
-    font-weight: bold;
+  &.mega-small{
+    @include fluid-type($min, $max, 9px, 13px);
+    line-height: 1em;
+    font-family: $gotham-medium;
   }
 
   a {
@@ -143,34 +173,14 @@ p, .v-select, a, .text-link, li {
   }
 }
 
-.p-semibold {
-  font-family: $arial;
-  font-weight: 600;
-}
 
 label {
-  font-family: $gotham-bold;
-  font-size: 14px;
-  line-height: 1.1em;
-  font-weight: 800;
-  letter-spacing: 0.1em;
+  @include fluid-type($min, $max, 12px, 16px);
+  line-height: 2em;
+  text-transform: uppercase;
 
   &.small {
     font-size: 12px;
-  }
-}
-
-.schoolbook {
-  font-family: $lemonde-livre-bold;
-  font-size: 14px;
-  font-weight: 700;
-
-  &.small {
-    font-size: 12px;
-  }
-
-  &.large {
-    font-size: 16px;
   }
 }
 
@@ -187,6 +197,8 @@ strong {
 }
 
 input{
+  @include fluid-type($min, $max, 12px, 16px);
+  line-height: 1em;
   font-family: $gotham-medium;
 }
 
@@ -194,82 +206,45 @@ input{
 HEADERS
 *************************************************/
 
-@include respond-to($average-desktop) {
+
+@include respond-to($tablet) {
   h1 {
-    font-size: 156px;
     line-height: 126px;
   }
 
   h2 {
-    font-size: 135px;
     line-height: 110px;
   }
 
   h3 {
-    font-size: 112px;
-    line-height: 94px;
+    line-height: 1.38em;
   }
 
   h4 {
-    font-size: 55px;
-    line-height: 48px;
+    line-height: 1.39em;
   }
-
-  // h5 {
-  //   font-size: 45px;
-  //   line-height: 4px;
-  // }
-
+  h5{
+    line-height: 1em;
+  }
+  h6{
+    line-height: 1em;
+    &.spread{
+      text-transform: uppercase;
+      letter-spacing: 0.4em;
+    }
+  }
 
   p, textarea, a, .text-link, li, input {
-    font-size: 18px;
-    line-height: 28px;
-
-    &.small {
-      font-size: 18px;
-      line-height: 20px;
-    }
-
-    &.mega-small {
-      font-size: 13px;
-      line-height: 18px;
-    }
-
-    &.large {
-      font-size: 20px;
-      line-height: 34px;
-    }
+    line-height: 1.41em; 
 
     &.spread{
-      // font-family: $gotham-bold;
-      font-size: 16px;
-      letter-spacing: 0.8em;
-      line-height: 20px;
+      line-height: 1.5em; 
       // text-transform: uppercase;
-
-      &.small {
-        font-size: 12px;
-        line-height: 15px;
-      }
-
-      &.large {
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 24px;
-      }
+      // letter-spacing: 0.8em;
     }
+
+    
   }
 
-  li {
-    line-height: 24px;
-  }
-
-  label {
-    font-size: 18px;
-    line-height: 20px;
-
-    &.small {
-      font-size: 16px;
-    }
-  }
 }
+
