--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'GothamBook';
-  src: url('/fonts/Gotham-book.otf');
+  src: url('/fonts/GothamSSm-Book_Web.woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'GothamMedium';
-  src: url('/fonts/Gotham-medium.otf');
+  src: url('/fonts/GothamSSm-Medium_Web.woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'GothamBold';
-  src: url('/fonts/GothamBold.ttf');
+  src: url('/fonts/GothamSSm-Bold_Web.woff');
   font-weight: normal;
   font-style: normal;
 }
