--- a/assets/styles/_vars.scss
+++ b/assets/styles/_vars.scss
@@ -31,6 +31,7 @@ $margin-extra-large: 48px;
 $margin-large: 32px;
 $margin-normal: 24px;
 $margin-small: 12px;
+$margin-extra-small: 6px;
 
 // Speeds
 $speed-demon: 333ms;
