--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -1,23 +1,4 @@
-@font-face {
-  font-family: 'GothamBook';
-  src: url('/fonts/GothamSSm-Book_Web.woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'GothamMedium';
-  src: url('/fonts/GothamSSm-Medium_Web.woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'GothamBold';
-  src: url('/fonts/GothamSSm-Bold_Web.woff');
-  font-weight: normal;
-  font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Tinos&display=swap');
 
 @font-face {
   font-family: 'LemondeLivreBold';
@@ -25,7 +6,6 @@
   font-weight: normal;
   font-style: normal;
 }
-
 
 // Fluid Type
 @function strip-unit($value) {
@@ -70,15 +50,19 @@ h4{
   font-family: $lemonde-livre-bold;
 }
 
-h5{
-  font-family: $gotham-bold;
+h5 {
+  // font-family: $gotham-bold;
+  font-family: $montessarat;
+  font-weight: 700;
   // letter-spacing: 0.025em;
   // line-height:$h5-line-height;
   // line-height: 1em;
 }
 
 h6{
-  font-family: $gotham-bold;
+  // font-family: $gotham-bold;
+  font-family: $montessarat;
+  font-weight: 700;
   &.uppercased{
     text-transform: uppercase;
   }
@@ -126,17 +110,19 @@ h6{
 
 
 p, .v-select, a, .text-link, li, body, li, button {
-  font-family: $gotham-book;
+  font-family: $montessarat;
   @include fluid-type($min, $max, 14px, 16px);
   line-height: 1.71em;
   text-transform: none;
+  font-weight: 400;
 
   &.spread{
-    font-family: $gotham-bold;
+    font-family: $montessarat;
     @include fluid-type($min, $max, 12px, 16px);
     letter-spacing: 0.4em;
     line-height: 2em;
     text-transform: uppercase;
+    font-weight: 700;
 
     &.small {
       line-height: 15px;
@@ -147,16 +133,18 @@ p, .v-select, a, .text-link, li, body, li, button {
     }
   }
 
-  &.small{
+  &.small {
     @include fluid-type($min, $max, 12px, 16px);
     line-height: 1em;
-    font-family: $gotham-medium;
+    font-family: $montessarat;
+    font-weight: 500;
   }
 
   &.mega-small{
     @include fluid-type($min, $max, 9px, 13px);
     line-height: 1em;
-    font-family: $gotham-medium;
+    font-family: $montessarat;
+    font-weight: 500;
   }
 
   a {
@@ -178,6 +166,8 @@ label {
   @include fluid-type($min, $max, 12px, 16px);
   line-height: 2em;
   text-transform: uppercase;
+  font-family: $montessarat;
+  font-weight: 700;
 
   &.small {
     font-size: 12px;
@@ -189,17 +179,21 @@ strong {
 }
 
 .semibold {
-  font-family: $gotham-book;
+  font-family: $montessarat;
+  font-weight: 400;
 }
 
 .bold {
-  font-family: $gotham-bold;
+  font-family: $montessarat;
+  font-weight: 700;
 }
 
 input{
   @include fluid-type($min, $max, 12px, 16px);
   line-height: 1em;
-  font-family: $gotham-medium;
+  // font-family: $gotham-medium;
+  font-family: $montessarat;
+  font-weight: 500;
 }
 
 /*************************************************
