--- a/assets/styles/_vars.scss
+++ b/assets/styles/_vars.scss
@@ -15,6 +15,8 @@ $dark-white: #F7F7F7;
 $gotham-bold: "GothamBold", "Helvetica Neue", Helvetica, sans-serif;
 $gotham-medium: 'GothamMedium', "Helvetica Neue", Helvetica, sans-serif;
 $gotham-book: 'GothamBook', "Helvetica Neue", Helvetica, sans-serif;
+
+$montessarat: 'Montserrat', "Helvetica Neue", Helvetica, sans-serif;
 $lemonde-livre-bold: 'LeMondeLivreBold', "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
 $arial: Arial, "Helvetica Neue", Helvetica, sans-serif;
 
